samples/_failures_safe/1761371686_4b32a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44460b88.c: In function ‘main’:
./samples/SAFE/__tmp_44460b88.c:158:5: error: expected declaration or statement at end of input
  158 |     matrix_print(&mat1, "A");
      |     ^~~~~~~~~~~~
